force-app/main/default/objects/Campaign/fields/Requester_Title__c.field-meta.xml
<CustomField>
    <fullName>Requester_Title__c</fullName>
    <description>Requester Role</description>
    <formula>Requester_Name__r.Title</formula>
    <inlineHelpText>Requester Role</inlineHelpText>
    <label>Title</label>
    <type>Text</type>
</CustomField>