force-app/main/default/objects/Campaign/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alle</fullName>
            </value>
            <value>
                <fullName>ASC Solutions</fullName>
            </value>
            <value>
                <fullName>Biologics</fullName>
            </value>
            <value>
                <fullName>Bone Healing</fullName>
            </value>
            <value>
                <fullName>Cement</fullName>
            </value>
            <value>
                <fullName>CMF &amp; Thoracic</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Etex</fullName>
            </value>
            <value>
                <fullName>Extremities</fullName>
            </value>
            <value>
                <fullName>Foot &amp; Ankle</fullName>
            </value>
            <value>
                <fullName>Hip</fullName>
            </value>
            <value>
                <fullName>Knee</fullName>
            </value>
            <value>
                <fullName>Knee Creations</fullName>
            </value>
            <value>
                <fullName>mymobility</fullName>
            </value>
            <value>
                <fullName>OSP</fullName>
            </value>
            <value>
                <fullName>ROSA</fullName>
            </value>
            <value>
                <fullName>Spine</fullName>
            </value>
            <value>
                <fullName>Sports Medicine</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
            <value>
                <fullName>Trauma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>