force-app/main/default/objects/Campaign/fields/Signed_Copy_W_9_form__c.field-meta.xml
<CustomField>
    <fullName>Signed_Copy_W_9_form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed Copy W-9 form</label>
    <type>Checkbox</type>
</CustomField>