force-app/main/default/objects/Campaign/fields/Signed_ZB_Exhibitor_Letter_of_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Signed_ZB_Exhibitor_Letter_of_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed ZB Exhibitor Letter of Agreement</label>
    <type>Checkbox</type>
</CustomField>