force-app/main/default/objects/Campaign/fields/Single_Event_or_First_Meeting_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Single_Event_or_First_Meeting_End_Date__c</fullName>
    <description>Single Event or First Meeting End Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Single Event or First Meeting End Date</label>
    <type>Date</type>
</CustomField>