force-app/main/default/objects/Campaign/fields/Standfl_che__c.field-meta.xml
<CustomField>
    <fullName>Standfl_che__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Geben Sie hier die Grösse des gemieteten Standplatzes ein</inlineHelpText>
    <label>Standfläche</label>
    <length>40</length>
    <type>Text</type>
</CustomField>