force-app/main/default/objects/Campaign/fields/Target_Audience_Other__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience_Other__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Provide details if Target Audience is Other</inlineHelpText>
    <label>Target Audience Other</label>
    <type>TextArea</type>
</CustomField>