force-app/main/default/objects/Campaign/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Field created to capture title for Regional Event/Exhibit Request</description>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ASD</fullName>
            </value>
            <value>
                <fullName>ATSR</fullName>
            </value>
            <value>
                <fullName>CSM</fullName>
            </value>
            <value>
                <fullName>DDSS</fullName>
            </value>
            <value>
                <fullName>KAS</fullName>
            </value>
            <value>
                <fullName>RSM</fullName>
            </value>
            <value>
                <fullName>RSS</fullName>
            </value>
            <value>
                <fullName>STSR</fullName>
            </value>
            <value>
                <fullName>TSR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>