force-app/main/default/objects/Campaign/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <description>This tracking number is an alpha-numeric field on all internal Zimmer Pink Routers</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field is required for all mass mailings and email campaigns</inlineHelpText>
    <label>Pink Router Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>