force-app/main/default/objects/Campaign/fields/Venue_Address__c.field-meta.xml
<CustomField>
    <fullName>Venue_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Venue Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>