force-app/main/default/objects/Campaign/fields/Venue_City__c.field-meta.xml
<CustomField>
    <fullName>Venue_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Venue City</label>
    <length>60</length>
    <type>Text</type>
</CustomField>