force-app/main/default/objects/Campaign/fields/Venue_Country__c.field-meta.xml
<CustomField>
    <fullName>Venue_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Venue Country</label>
    <length>60</length>
    <type>Text</type>
</CustomField>