force-app/main/default/objects/Campaign/fields/Venue_State__c.field-meta.xml
<CustomField>
    <fullName>Venue_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Venue State</label>
    <length>60</length>
    <type>Text</type>
</CustomField>