force-app/main/default/objects/Campaign/fields/What_is_the_anticipated_number_of_attend__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_anticipated_number_of_attend__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>What is anticipated number of attendees</label>
    <length>20</length>
    <type>Text</type>
</CustomField>