force-app/main/default/objects/Campaign/fields/What_is_the_estimated_number_of_exhibito__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_estimated_number_of_exhibito__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the estimated number of exhibitors at this event/exhibit?</inlineHelpText>
    <label>What is estimated number of exhibitors</label>
    <length>20</length>
    <type>Text</type>
</CustomField>