force-app/main/default/objects/Campaign/fields/What_is_the_Event_Exhibit_web_address__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_Event_Exhibit_web_address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>What is the Event/Exhibit web address?</label>
    <length>180</length>
    <type>Text</type>
</CustomField>