force-app/main/default/objects/Campaign/fields/What_is_the_name_of_the_Event_Exhibit_yo__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_name_of_the_Event_Exhibit_yo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the name of the Event/Exhibit you are planning to attend?</inlineHelpText>
    <label>What is the name of the Event/Exhibit</label>
    <type>TextArea</type>
</CustomField>