force-app/main/default/objects/Campaign/fields/What_size_booth_space_is_being_provided__c.field-meta.xml
<CustomField>
    <fullName>What_size_booth_space_is_being_provided__c</fullName>
    <inlineHelpText>What size booth space is being provided at this event/exhibit?</inlineHelpText>
    <label>What size booth space is being provided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tabletop</fullName>
            </value>
            <value>
                <fullName>8x6</fullName>
            </value>
            <value>
                <fullName>8x8</fullName>
            </value>
            <value>
                <fullName>8x10</fullName>
            </value>
            <value>
                <fullName>10x10</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>