force-app/main/default/objects/Campaign/fields/Who_is_the_target_audience_at_this_event__c.field-meta.xml
<CustomField>
    <fullName>Who_is_the_target_audience_at_this_event__c</fullName>
    <label>Who is the target audience at this event</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Dental Hygienists</fullName>
            </value>
            <value>
                <fullName>Dental Students</fullName>
            </value>
            <value>
                <fullName>Endodontists</fullName>
            </value>
            <value>
                <fullName>General Dentists</fullName>
            </value>
            <value>
                <fullName>Lab Technicians</fullName>
            </value>
            <value>
                <fullName>Office Staff</fullName>
            </value>
            <value>
                <fullName>Oral Surgeons</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Periodontists</fullName>
            </value>
            <value>
                <fullName>Prosthodontists</fullName>
            </value>
            <value>
                <fullName>Students</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>