force-app/main/default/objects/Campaign/fields/Will_you_be_attending_the_event__c.field-meta.xml
<CustomField>
    <fullName>Will_you_be_attending_the_event__c</fullName>
    <label>Will you be attending the event?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>