force-app/main/default/objects/Campaign/fields/Zimmer_Event__c.field-meta.xml
<CustomField>
    <fullName>Zimmer_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Who is organising the event</description>
    <label>Zimmer Event</label>
    <type>Checkbox</type>
</CustomField>