force-app/main/default/objects/Campaign/fields/Zimmer_Verantwortlicher__c.field-meta.xml
<CustomField>
    <fullName>Zimmer_Verantwortlicher__c</fullName>
    <description>Who is responsible for this Event in Zimmer inc.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Zimmer Verantwortlicher</label>
    <length>40</length>
    <type>Text</type>
</CustomField>