force-app/main/default/objects/Campaign/recordTypes/AM_US_Standard.recordType-meta.xml
<RecordType>
    <fullName>AM_US_Standard</fullName>
    <active>true</active>
    <label>AM-US-Standard</label>
</RecordType>