force-app/main/default/objects/Campaign/recordTypes/Cvent_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Cvent_Campaign</fullName>
    <active>true</active>
    <description>This record type will be used to create campaigns for any event available in Cvent.</description>
    <label>Cvent Campaign</label>
</RecordType>