force-app/main/default/objects/Campaign/recordTypes/DN_Promo.recordType-meta.xml
<RecordType>
    <fullName>DN_Promo</fullName>
    <active>true</active>
    <label>DN-Promo</label>
</RecordType>