force-app/main/default/objects/Campaign/recordTypes/EU_Sales.recordType-meta.xml
<RecordType>
    <fullName>EU_Sales</fullName>
    <active>true</active>
    <label>EU-Sales</label>
</RecordType>