force-app/main/default/objects/Campaign/recordTypes/Historical_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Historical_Campaign</fullName>
    <active>true</active>
    <label>Historical Campaign</label>
</RecordType>