force-app/main/default/objects/Campaign/recordTypes/Regional_Event_Exhibit_Request.recordType-meta.xml
<RecordType>
    <fullName>Regional_Event_Exhibit_Request</fullName>
    <active>true</active>
    <label>DN- Regional Event/Exhibit Request</label>
</RecordType>