force-app/main/default/objects/Campaign/validationRules/If_Booth_Space_is_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Booth_Space_is_Other</fullName>
    <active>true</active>
    <description>Please provide booth space if &apos;Other&apos; is selected</description>
    <errorConditionFormula>IF(
  AND(
 ISPICKVAL( What_size_booth_space_is_being_provided__c ,&apos;Other&apos;),
  ISBLANK( Booth_Space_Other__c ) 
)  , 
TRUE, FALSE
)</errorConditionFormula>
    <errorDisplayField>Booth_Space_Other__c</errorDisplayField>
    <errorMessage>IF Booth Space is &apos;Other&apos;, please provide Booth Space in &apos;Booth Space Other&apos; Field.</errorMessage>
</ValidationRule>