force-app/main/default/objects/Campaign/listViews/All_Campaigns_Active_and_In_Active.listView-meta.xml
<ListView>
    <fullName>All_Campaigns_Active_and_In_Active</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>equals</operation>
        <value>Institute,Medical Education,PathwayZ Live,Professional Education</value>
    </filters>
    <label>All Campaigns - Active and In-Active</label>
    <sharedTo>
        <group>Administrators</group>
    </sharedTo>
</ListView>