force-app/main/default/objects/Campaign/listViews/All_Campaigns_Iceland.listView-meta.xml
<ListView>
    <fullName>All_Campaigns_Iceland</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Iceland</value>
    </filters>
    <label>All Campaigns Iceland</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinatesInternal>Nordics</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>