force-app/main/default/objects/Campaign/listViews/Benelux_actieve_campagnes.listView-meta.xml
<ListView>
    <fullName>Benelux_actieve_campagnes</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>City__c</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.NUM_RESPONSES</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>Segment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>startsWith</operation>
        <value>NL,BE</value>
    </filters>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Benelux actieve campagnes</label>
    <language>nl_NL</language>
    <sharedTo>
        <roleAndSubordinatesInternal>Benelux</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>