force-app/main/default/objects/Campaign/listViews/Bogarts_Events.listView-meta.xml
<ListView>
    <fullName>Bogarts_Events</fullName>
    <columns>External_Campaign_ID__c</columns>
    <columns>Segment__c</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Event_Website__c</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Country__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.NUM_RESPONSES</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CAMPAIGN.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Cvent_Campaign</value>
    </filters>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>equals</operation>
        <value>In Progress,Planned</value>
    </filters>
    <filters>
        <field>CAMPAIGN.START_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>equals</operation>
        <value>Medical Education</value>
    </filters>
    <filters>
        <field>Segment__c</field>
        <operation>excludes</operation>
        <value>Dental,Spine</value>
    </filters>
    <label>Bogart Events</label>
    <language>en_US</language>
    <sharedTo>
        <group>CenterofExcellence</group>
        <roleAndSubordinatesInternal>AM_RC_Executive_Sales_Management</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>