force-app/main/default/objects/Campaign/listViews/Bone_Healing_Campaigns.listView-meta.xml
<ListView>
    <fullName>Bone_Healing_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>012C0000000IASU</value>
    </filters>
    <label>Bone Healing Campaigns</label>
    <language>en_US</language>
    <sharedTo/>
</ListView>