force-app/main/default/objects/Campaign/listViews/Created_by_Janet.listView-meta.xml
<ListView>
    <fullName>Created_by_Janet</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Carr</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Janet</value>
    </filters>
    <label>Owned by Janet</label>
    <language>en_US</language>
    <sharedTo>
        <group>Dental_Education_Group</group>
    </sharedTo>
</ListView>